# tallerIDS

./: CMakeLists.txt  Detector.cpp  Detector.h  DetectorMonitor.cpp  DetectorMonitor.h  Ensamblador.cpp  Ensamblador.h  EnsambladorMonitor.cpp  EnsambladorMonitor.h  Gestor.cpp  Gestor.h  GestorMonitor.cpp  GestorMonitor.h  Id.cpp  Id.h  IdPaquete.cpp  IdPaquete.h  Ids.cpp  Ids.h  ImpresionMonitor.cpp  ImpresionMonitor.h  Lock.cpp  Lock.h  Makefile  PaqsCompletosMon.cpp  PaqsCompletosMon.h  Paquete.cpp  Paquete.h  PaquetesMonitor.cpp  PaquetesMonitor.h  README.md  Regla.cpp  Regla.h  ReglaAll.cpp  ReglaAll.h  ReglaAlways.cpp  ReglaAlways.h  ReglaAny.cpp  ReglaAny.h  Sniffer.cpp  (+4 more)
src/: Detector.h  DetectorMonitor.cpp  Ensamblador.cpp  EnsambladorMonitor.cpp  IdPaquete.cpp  Ids.cpp  Lock.cpp  Paquete.cpp  ReglaAll.cpp  Sniffer.cpp  Sniffer.h  Thread.cpp  main.cpp
